5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1578_1332.log
== TEST (2019-03-12 14:47:58) 
-- CODE:
aresta =5
area = 3//*3a**1//2**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3//*3a**1//2**2
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:50:13) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area, 4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:50:26) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.19468
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:51:18) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area, 4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:52:00) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.186586
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:54:09) 
-- CODE:
aresta =5
area = 3//2*3*aresta**1//2**2
 
print(round(area,3//2*3*aresta**1//2**2,4 4))
-- ERROR:
File "XXXX", line 4
    print(round(area,3//2*3*aresta**1//2**2,4 4))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:54:31) 
-- CODE:
aresta =5
area = 3//2*3*aresta**1//2**2
 
print(round(area//2*3*aresta**1//2**2,4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:54:36) 
-- CODE:
aresta =5
area = 3//2*3*aresta**1//2**2
 
print(round(area//2*3*aresta**1//2**2,4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:54:41) 
-- CODE:
aresta =5
area = 3//2*3*aresta**1//2**2
 
print(round(area//2*3*aresta**1//2**2,4))
-- EXECUTION TIME:
0.207363
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:57:58) 
-- CODE:
aresta =5
area = 3//2*3*aresta**1//2**2
 
print(round(area,4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:58:01) 
-- CODE:
aresta =5
area = 3//2*3*aresta**1//2**2
 
print(round(area,4))
-- EXECUTION TIME:
0.146289
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 14:58:15) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area,4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 14:58:19) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area,4))
-- EXECUTION TIME:
0.167075
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:02:52) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area,4))
-- EXECUTION TIME:
0.220426
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:05:16) 
-- CODE:
aresta =5
area = 3/2*3*5**1//2**2
 
print(round(area,4))
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:05:20) 
-- CODE:
aresta =5
area = 3/2*3*5**1//2**2
 
print(round(area,4))
-- EXECUTION TIME:
0.191135
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:05:27) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area,4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:05:31) 
-- CODE:
aresta =5
area = 3//2*3*5**1//2**2
 
print(round(area,4))
-- EXECUTION TIME:
0.153399
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:09:58) 
-- CODE:
aresta =5
area = 3/2*3**0,5*a**2
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0,5*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:10:17) 
-- CODE:
aresta =5
area = 3/2*3**1/2*a**2
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**1/2*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:11:08) 
-- CODE:
aresta =5
area = 3//2*3*a**2**1/n
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3//2*3*a**2**1/n
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:11:16) 
-- CODE:
aresta =5
area = 3//2*3*a**2**1/2
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3//2*3*a**2**1/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:11:56) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:12:01) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- EXECUTION TIME:
0.140685
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:12:10) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:12:33) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:12:37) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- EXECUTION TIME:
0.131279
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:13:05) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,2))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:13:08) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,2))
-- EXECUTION TIME:
0.164045
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:13:16) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- EXECUTION TIME:
0.136301
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:13:54) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:14:05) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.166556
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:15:07) 
-- CODE:
aresta =5
area = 3//2*3*5**2**0,5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:15:26) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.139403
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:15:28) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:15:32) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.137687
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:15:51) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:16:08) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.142965
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:16:10) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:17:10) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:14) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.156919
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:17:26) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/3
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:29) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/3
 
print(round(area, 4))
-- EXECUTION TIME:
0.14487
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:17:36) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:17:47) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2
 
print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:19:19) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:29:49) 
-- CODE:
aresta =5
area = 3//2*3*aresta**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:29:56) 
-- CODE:
aresta =5
area = 3//2*3*aresta**2**1/2
 
print(round(area,4))
-- EXECUTION TIME:
0.202714
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:58) 
-- CODE:
aresta =5
area = int(round)3//2*3*aresta**2**1/2
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area = int(round)3//2*3*aresta**2**1/2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:09) 
-- CODE:
aresta =5
area = 3//2*3*aresta**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:38) 
-- CODE:
aresta =5
area = 3//2*3*aresta**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:51) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
 
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:41) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
round(round(area))
print(round(area,4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:44) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1/2
round(round(area))
print(round(area,4))
-- EXECUTION TIME:
0.202635
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:18) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1//2

print(round(area,4))
-- OUTPUT:
37
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:23) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1//2

print(round(area,4))
-- EXECUTION TIME:
0.152898
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:50) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1//2

print(round(area,4))
-- OUTPUT:
56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:53) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1//2

print(round(area,4))
-- EXECUTION TIME:
0.167075
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:40) 
-- CODE:
aresta =5
area = 3//2*3*5**2**1//2

print(round(area,4))
-- OUTPUT:
37
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:50) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:00) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(area,3))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:42) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(round(area,3)))
-- OUTPUT:
56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:46) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(round(area,3)))
-- EXECUTION TIME:
0.173113
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:48) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(round(area,3)))
-- OUTPUT:
56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:06) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(area,3))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:13) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:22) 
-- CODE:
aresta =6
area = 3/2*3*5**2**1/2

print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:40) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:56) 
-- CODE:
aresta =5
area = 3/2*3*5**2**1/2

print(round(area,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:17:39) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta*2)

print(round(area,4))
-- OUTPUT:
25.9808
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:17:47) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta*2)

print(round(area,4))
-- EXECUTION TIME:
0.165295
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
25.9808
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:18:02) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta*2)

print(round(area,4))
-- OUTPUT:
25.9808
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:18:06) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta*2)

print(round(area,4))
-- EXECUTION TIME:
0.19305
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
25.9808
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:18:27) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)

print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:18:32) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)

print(round(area,4))
-- EXECUTION TIME:
0.189849
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:10:34) 
-- CODE:
aresta = 5
area = (3//2)*(3*1/2*a**2)

print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3//2)*(3*1/2*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:10:42) 
-- CODE:
aresta = 5
area = (3//2)*(3*1/2*a**2)

print(round(area,4))
-- EXECUTION TIME:
0.138125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3//2)*(3*1/2*a**2)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:10:55) 
-- CODE:
aresta = 5
area = (3//2)*(3*0.5*a**2)

print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3//2)*(3*0.5*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:11:05) 
-- CODE:
aresta = 5
area = (3/2)*(3*0.5*a**2)

print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3*0.5*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:11:28) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*a**2)

print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0.5*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:11:44) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)

print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:11:49) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)

print(round(area,4))
-- EXECUTION TIME:
0.172492
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:14:09) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)

print(round(area,4))
-- EXECUTION TIME:
0.166885
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:14:17) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)

print(round(area,4))
-- EXECUTION TIME:
0.147599
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
